fix cut off element when slide in animation is fired

--- a/src/css/toast.css
+++ b/src/css/toast.css
@@ -6,7 +6,7 @@
   right: 0;
   min-height: 200px;
   min-width: 200px;
-  padding-left: 1rem;
+  padding-left: 2rem;
   overflow: hidden;
   visibility: hidden;
 }
